package fps_rpg.creational;

public class Assault extends PlayerCharacter {
    public Assault(String name) { super(name, 120, 16, 8, 0.7); }
}
