package fps_rpg.creational;

public class Engineer extends PlayerCharacter {
    public Engineer(String name) { super(name, 110, 14, 10, 0.65); }
}
