package fps_rpg.creational;

public class Sniper extends PlayerCharacter {
    public Sniper(String name) { super(name, 90, 18, 5, 0.75); }
}
